Fixed styling on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,7 +160,11 @@ img {
 /* Mobile Screens */
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
-  .container, .blogContainer {
+  .container {
+    max-width: 85vw;
+    margin: 0 auto;
+  }
+  .blogContainer {
     max-width: 100vw;
     margin: 0 auto;
   }
